# cworld

./: .gitignore  .gitmodules  CMakeLists.txt  SConstruct  action.h  conanfile.py  cworld.cpp  domake.sh  domakelib.sh  earthmap.cpp  earthmap.h  hellogl  hellogl.cpp  hellogl.sh  helloglfw  helloglfw.cpp  helloglfw.sh  language.h  libcworld.h  main.cpp  object.h  person.h  prompt.h  utility.cpp  utility.h  world.h
data/: items.data  person.data
